Update examples to point to master instead of v1.6-integration

--- a/docs/rtk-query/api/ApiProvider.mdx
+++ b/docs/rtk-query/api/ApiProvider.mdx
@@ -20,7 +20,7 @@ Using this together with an existing Redux store will cause them to conflict wit
 ### Example
 
 <iframe
-  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/with-apiprovider?fontsize=12&runonclick=1&hidenavigation=1&module=%2Fsrc%2FApp.tsx&theme=dark"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/master/examples/query/react/with-apiprovider?fontsize=12&runonclick=1&hidenavigation=1&module=%2Fsrc%2FApp.tsx&theme=dark"
   style={{
     width: '100%',
     height: '800px',
