--- a/docs/rtk-query/usage/queries.mdx
+++ b/docs/rtk-query/usage/queries.mdx
@@ -116,7 +116,17 @@ In practice, the standard `useQuery`-based hooks such as `useGetPostQuery` will 
 
 ### Query Hook Options
 
-The query hooks expect two parameters: `(queryArg?, queryOptions?)`. The `queryArg` param will be passed through to the underlying `query` callback to generate the URL. The `queryOptions` object accepts several additional parameters that can be used to control the behavior of the data fetching:
+The query hooks expect two parameters: `(queryArg?, queryOptions?)`.
+
+The `queryArg` param will be passed through to the underlying `query` callback to generate the URL.
+
+:::caution
+
+The `queryArg` param is handed to a `useEffect` dependency array internally. RTK Query tries to keep the argument stable by performing a `shallowEquals` diff on the value, however if you pass a deeper nested argument, you will need to keep the param stable yourself, e.g. with `useMemo`.
+
+:::
+
+The `queryOptions` object accepts several additional parameters that can be used to control the behavior of the data fetching:
 
 - [skip](./conditional-fetching) - Allows a query to 'skip' running for that render. Defaults to `false`
 - [pollingInterval](./polling) - Allows a query to automatically refetch on a provided interval, specified in milliseconds. Defaults to `0` _(off)_
