Add descriptions to pages

--- a/docs/rtk-query/api/ApiProvider.mdx
+++ b/docs/rtk-query/api/ApiProvider.mdx
@@ -3,6 +3,7 @@ id: ApiProvider
 title: ApiProvider
 sidebar_label: ApiProvider
 hide_title: true
+description: 'RTK Query > API: ApiProvider reference'
 ---
 
 &nbsp;
