--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -3,6 +3,7 @@ id: createApi
 title: createApi
 sidebar_label: createApi
 hide_title: true
+description: 'RTK Query > API: createApi reference'
 ---
 
 &nbsp;
