--- a/docs/rtk-query/api/fetchBaseQuery.mdx
+++ b/docs/rtk-query/api/fetchBaseQuery.mdx
@@ -4,6 +4,7 @@ title: fetchBaseQuery
 sidebar_label: fetchBaseQuery
 hide_title: true
 hide_table_of_contents: false
+description: 'RTK Query > API: fetchBaseQuery reference'
 ---
 
 &nbsp;
