--- a/docs/rtk-query/api/setupListeners.mdx
+++ b/docs/rtk-query/api/setupListeners.mdx
@@ -4,6 +4,7 @@ title: setupListeners
 sidebar_label: setupListeners
 hide_title: true
 hide_table_of_contents: false
+description: 'RTK Query > API: setupListeners reference'
 ---
 
 &nbsp;
