--- a/docs/rtk-query/usage-with-typescript.mdx
+++ b/docs/rtk-query/usage-with-typescript.mdx
@@ -3,6 +3,7 @@ id: usage-with-typescript
 title: Usage With TypeScript
 sidebar_label: Usage With TypeScript
 hide_title: true
+description: 'RTK Query > TypeScript: Instructions on how to use RTK Query with TypeScript'
 ---
 
 &nbsp;
