--- a/docs/rtk-query/usage/automated-refetching.mdx
+++ b/docs/rtk-query/usage/automated-refetching.mdx
@@ -3,6 +3,7 @@ id: automated-refetching
 title: Automated Re-fetching
 sidebar_label: Automated Re-fetching
 hide_title: true
+description: 'RTK Query > Usage > Automated Refetching: cache invalidation management'
 ---
 
 &nbsp;
