--- a/docs/rtk-query/usage/cache-behavior.mdx
+++ b/docs/rtk-query/usage/cache-behavior.mdx
@@ -3,6 +3,7 @@ id: cache-behavior
 title: Cache Behavior
 sidebar_label: Cache Behavior
 hide_title: true
+description: 'RTK Query > Usage > Cache Behavior: defaults, cache lifetimes, and tradeoffs'
 ---
 
 &nbsp;
