--- a/docs/rtk-query/usage/code-generation.mdx
+++ b/docs/rtk-query/usage/code-generation.mdx
@@ -3,6 +3,7 @@ id: code-generation
 title: Code Generation
 sidebar_label: Code Generation
 hide_title: true
+description: 'RTK Query > Usage > Code Generation: automated creation of API code'
 ---
 
 &nbsp;
