--- a/docs/rtk-query/usage/code-splitting.mdx
+++ b/docs/rtk-query/usage/code-splitting.mdx
@@ -3,6 +3,7 @@ id: code-splitting
 title: Code Splitting
 sidebar_label: Code Splitting
 hide_title: true
+description: 'RTK Query > Usage > Code Splitting: dynamic injection of endpoints'
 ---
 
 &nbsp;
