--- a/docs/rtk-query/usage/conditional-fetching.mdx
+++ b/docs/rtk-query/usage/conditional-fetching.mdx
@@ -3,6 +3,7 @@ id: conditional-fetching
 title: Conditional Fetching
 sidebar_label: Conditional Fetching
 hide_title: true
+description: 'RTK Query > Usage > Conditional Fetching: skipping fetching if needed'
 ---
 
 &nbsp;
