--- a/docs/rtk-query/usage/customizing-create-api.mdx
+++ b/docs/rtk-query/usage/customizing-create-api.mdx
@@ -3,6 +3,7 @@ id: customizing-create-api
 title: Customizing createApi
 sidebar_label: Customizing createApi
 hide_title: true
+description: 'RTK Query > Usage > Customizing createApi: adding customized variations'
 ---
 
 &nbsp;
