--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -3,6 +3,7 @@ id: customizing-queries
 title: Customizing Queries
 sidebar_label: Customizing Queries
 hide_title: true
+description: 'RTK Query > Usage > Customizing Queries: overriding default query behavior'
 ---
 
 &nbsp;
