--- a/docs/rtk-query/usage/error-handling.mdx
+++ b/docs/rtk-query/usage/error-handling.mdx
@@ -3,6 +3,7 @@ id: error-handling
 title: Error Handling
 sidebar_label: Error Handling
 hide_title: true
+description: 'RTK Query > Usage > Error Handling: dealing with API errors'
 ---
 
 &nbsp;
