--- a/docs/rtk-query/usage/examples.mdx
+++ b/docs/rtk-query/usage/examples.mdx
@@ -3,6 +3,7 @@ id: examples
 title: RTK Query Examples
 sidebar_label: Examples
 hide_title: true
+description: 'RTK Query > Usage > Examples: sandboxes with runnable apps'
 ---
 
 &nbsp;
