--- a/docs/rtk-query/usage/migrating-to-rtk-query.mdx
+++ b/docs/rtk-query/usage/migrating-to-rtk-query.mdx
@@ -3,6 +3,7 @@ id: migrating-to-rtk-query
 title: Migrating to RTK Query
 sidebar_label: Migrating to RTK Query
 hide_title: true
+description: 'RTK Query > Usage > Migrating to RTKQ: how to convert logic to RTKQ'
 ---
 
 &nbsp;
