--- a/docs/rtk-query/usage/mutations.mdx
+++ b/docs/rtk-query/usage/mutations.mdx
@@ -3,6 +3,7 @@ id: mutations
 title: Mutations
 sidebar_label: Mutations
 hide_title: true
+description: 'RTK Query > Usage > Mutations: sending updates to the server'
 ---
 
 &nbsp;
