--- a/docs/rtk-query/usage/optimistic-updates.mdx
+++ b/docs/rtk-query/usage/optimistic-updates.mdx
@@ -3,6 +3,7 @@ id: optimistic-updates
 title: Optimistic Updates
 sidebar_label: Optimistic Updates
 hide_title: true
+description: 'RTK Query > Usage > Optimistic Updates: showing UI changes immediately'
 ---
 
 &nbsp;
