--- a/docs/rtk-query/usage/polling.mdx
+++ b/docs/rtk-query/usage/polling.mdx
@@ -3,6 +3,7 @@ id: polling
 title: Polling
 sidebar_label: Polling
 hide_title: true
+description: 'RTK Query > Usage > Polling: re-fetching data on a timer'
 ---
 
 &nbsp;
