--- a/docs/rtk-query/usage/prefetching.mdx
+++ b/docs/rtk-query/usage/prefetching.mdx
@@ -3,6 +3,7 @@ id: prefetching
 title: Prefetching
 sidebar_label: Prefetching
 hide_title: true
+description: 'RTK Query > Usage > Prefetching: fetching before user interaction'
 ---
 
 &nbsp;
