--- a/docs/rtk-query/usage/queries.mdx
+++ b/docs/rtk-query/usage/queries.mdx
@@ -3,6 +3,7 @@ id: queries
 title: Queries
 sidebar_label: Queries
 hide_title: true
+description: 'RTK Query > Usage > Queries: fetching data from a server'
 ---
 
 &nbsp;
