--- a/docs/rtk-query/usage/streaming-updates.mdx
+++ b/docs/rtk-query/usage/streaming-updates.mdx
@@ -3,6 +3,7 @@ id: streaming-updates
 title: Streaming Updates
 sidebar_label: Streaming Updates
 hide_title: true
+description: 'RTK Query > Usage > Streaming Updates: updating cache from pushed messages'
 ---
 
 &nbsp;
