--- a/docs/rtk-query/usage/usage-without-react-hooks.mdx
+++ b/docs/rtk-query/usage/usage-without-react-hooks.mdx
@@ -3,6 +3,7 @@ id: usage-without-react-hooks
 title: Usage Without React Hooks
 sidebar_label: Usage Without React Hooks
 hide_title: true
+description: 'RTK Query > Usage > Usage Without React Hooks: Using RTKQ with other UI frameworks'
 ---
 
 &nbsp;
