--- a/docs/rtk-query/usage/pagination.mdx
+++ b/docs/rtk-query/usage/pagination.mdx
@@ -3,6 +3,7 @@ id: pagination
 title: Pagination
 sidebar_label: Pagination
 hide_title: true
+description: 'RTK Query > Usage > Pagination: suggestions for handling paginated data'
 ---
 
 &nbsp;
