--- a/docs/rtk-query/usage/mutations.mdx
+++ b/docs/rtk-query/usage/mutations.mdx
@@ -201,7 +201,7 @@ export const postApi = createApi({
     addPost: build.mutation<Post, Partial<Post>>({
       query(body) {
         return {
-          url: `poss`,
+          url: `post`,
           method: 'POST',
           body,
         }
