Remove extraneous word in cache docs

--- a/docs/rtk-query/usage/cache-behavior.mdx
+++ b/docs/rtk-query/usage/cache-behavior.mdx
@@ -156,7 +156,7 @@ const Component = () => {
 
 Queries can be encouraged to re-fetch more frequently than usual via the [`refetchOnMountOrArgChange`](../api/createApi.mdx#refetchonmountorargchange) property. This can be passed to the endpoint as a whole, to individual hook calls, or when dispatching the [`initiate`](../api/created-api/endpoints.mdx#initiate)action.
 
-`refetchOnMountOrArgChange` is used to encourage re-fetching in additional situations where the default behavior would instead serve te cached data.
+`refetchOnMountOrArgChange` is used to encourage re-fetching in additional situations where the default behavior would instead serve cached data.
 
 `refetchOnMountOrArgChange` accepts either a boolean value, or a number as time in seconds.
 
