Fix the example code in "Quick start" tutorial
VSCode shows the error 
```
Exported variable 'store' has or is using name 'CounterState' from external module ".../src/client/features/counter/counterSlice" but cannot be named.
ts(4023)
```

Managed to fix this by exporting the CounterState.

--- a/docs/tutorials/quick-start.mdx
+++ b/docs/tutorials/quick-start.mdx
@@ -112,7 +112,7 @@ Redux requires that [we write all state updates immutably, by making copies of d
 ```ts title="features/counter/counterSlice.js"
 import { createSlice, PayloadAction } from '@reduxjs/toolkit'
 
-interface CounterState {
+export interface CounterState {
   value: number
 }
 
