--- a/docs/rtk-query/usage/automated-refetching.mdx
+++ b/docs/rtk-query/usage/automated-refetching.mdx
@@ -388,7 +388,7 @@ In order to provide stronger control over invalidating the appropriate data, you
 
 The matrix below shows examples of which invalidated tags will affect and invalidate which provided tags:
 
-<table class="checkbox-table">
+<table className="checkbox-table">
   <thead>
     <tr>
       <th className="diagonal-cell">
