--- a/docs/rtk-query/usage-with-typescript.mdx
+++ b/docs/rtk-query/usage-with-typescript.mdx
@@ -321,6 +321,7 @@ const api = createApi({
           return {
             error: {
               status: 500,
+              statusText: 'Error',
               data: 'Invalid ID provided.',
             },
           }
