Apply suggestions from code review
Co-authored-by: Lenz Weber <mail@lenzw.de>

--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -583,7 +583,7 @@ const dynamicBaseQuery: BaseQueryFn<
     return {
       error: {
         status: 400,
-        statusText: 'Error',
+        statusText: 'Bad Request',
         data: 'No project ID received',
       },
     }
