"an object full of reducer functions" wording fix
https://github.com/reduxjs/redux-toolkit/issues/1506

--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -9,7 +9,7 @@ hide_title: true
 
 # `createSlice`
 
-A function that accepts an initial state, an object full of reducer functions, and a "slice name",
+A function that accepts an initial state, an object of reducer functions, and a "slice name",
 and automatically generates action creators and action types that correspond to the reducers and state.
 
 This API is the standard approach for writing Redux logic.
