📝 Expand on implementing manual cache updates
- Add `Manual Cache Updates` page
- Replace `Optimistic Updates` sidebar link with
  `Manual Cache Updates` link, and move closer to top
- Move `Optimistic Updates` content to a recipe within
  `Manual Cache Updates`
- Delete old unused `cache-management` page
  (replaced by `cache-management-utils`, but old one
  was accidentally left behind)

--- a/docs/rtk-query/api/created-api/cache-management-utils.mdx
+++ b/docs/rtk-query/api/created-api/cache-management-utils.mdx
@@ -9,7 +9,7 @@ hide_title: true
 
 # API Slices: Cache Management Utilities
 
-The API slice object includes cache management utilities that are used for implementing [optimistic updates](../../usage/optimistic-updates.mdx). These are included in a `util` field inside the slice object.
+The API slice object includes cache management utilities that are used for implementing [optimistic updates](../../usage/manual-cache-updates.mdx#optimistic-updates). These are included in a `util` field inside the slice object.
 
 ### `updateQueryData`
 
