--- a/docs/rtk-query/usage/mutations.mdx
+++ b/docs/rtk-query/usage/mutations.mdx
@@ -79,7 +79,7 @@ const api = createApi({
 
 :::info
 
-The `onQueryStarted` method can be used for [optimistic updates](./optimistic-updates)
+The `onQueryStarted` method can be used for [optimistic updates](./manual-cache-updates.mdx#optimistic-updates)
 
 :::
 
