Fix error in createAsyncThunk.mdx
"users" should be "entities" as defined in state

--- a/docs/api/createAsyncThunk.mdx
+++ b/docs/api/createAsyncThunk.mdx
@@ -560,7 +560,7 @@ const usersSlice = createSlice({
 })
 
 const UsersComponent = () => {
-  const { users, loading, error } = useSelector((state) => state.users)
+  const { entities, loading, error } = useSelector((state) => state.users)
   const dispatch = useDispatch()
 
   const fetchOneUser = async (userId) => {
