Add `reducerPath` property in creation of api

--- a/docs/rtk-query/usage/migrating-to-rtk-query.mdx
+++ b/docs/rtk-query/usage/migrating-to-rtk-query.mdx
@@ -335,6 +335,7 @@ import { Pokemon } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: 'https://pokeapi.co/api/v2/' }),
+  reducerPath: 'pokemonApi',
   endpoints: (build) => ({
     // highlight-start
     getPokemonByName: build.query<Pokemon, string>({
