--- a/docs/rtk-query/api/created-api/hooks.mdx
+++ b/docs/rtk-query/api/created-api/hooks.mdx
@@ -363,7 +363,7 @@ selectFromResult: () => ({})
   - `mutationState`: A query status object containing the current loading state and metadata about the request, or the values returned by the `selectFromResult` option where applicable.
     Additionally, this object will contain
     - a `reset` method to reset the hook back to it's original state and remove the current result from the cache
-    - an `originalArgs` property that contain the argument passed to the last call of the `trigger` function.
+    - an `originalArgs` property that contains the argument passed to the last call of the `trigger` function.
 
 #### Description
 
