fix mistake in docs "automated-refetching.mdx"

--- a/docs/rtk-query/usage/automated-refetching.mdx
+++ b/docs/rtk-query/usage/automated-refetching.mdx
@@ -819,7 +819,7 @@ const api = createApi({
       invalidatesTags: (result) => (result ? ['UNAUTHORIZED'] : []),
     }),
     refetchErroredQueries: build.mutation<null, void>({
-      queryFn: () => ({ data: null }),
+      query: () => ({ data: null }),
       invalidatesTags: ['UNKNOWN_ERROR'],
     }),
   }),
