Support a custom paramsSerializer on fetchBaseQuery

--- a/docs/rtk-query/usage/manual-cache-updates.mdx
+++ b/docs/rtk-query/usage/manual-cache-updates.mdx
@@ -95,6 +95,7 @@ const api = createApi({
         method: 'PATCH',
         body: patch,
       }),
+      invalidatesTags: ['Post'],
       // highlight-start
       async onQueryStarted({ id, ...patch }, { dispatch, queryFulfilled }) {
         const patchResult = dispatch(
@@ -186,6 +187,7 @@ const api = createApi({
         method: 'PATCH',
         body: patch,
       }),
+      invalidatesTags: ['Post'],
       // highlight-start
       async onQueryStarted({ id, ...patch }, { dispatch, queryFulfilled }) {
         try {
