📝 Document persistence related features

--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -297,6 +297,8 @@ export const { endpoints, reducerPath, reducer, middleware } = api
 
 [examples](docblock://query/createApi.ts?token=CreateApiOptions.extractRehydrationInfo)
 
+See also [Server Side Rendering](../usage/server-side-rendering.mdx) and
+[Persistence and Rehydration](../usage/persistence-and-rehydration.mdx).
 
 ### `tagTypes`
 
